{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 43,
  "lineage": "7b05c823-4f92-16d2-f5be-144dbac8872f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "idalov_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:loadbalancer/app/idalov-app-lb/3891f646003eab84",
            "arn_suffix": "app/idalov-app-lb/3891f646003eab84",
            "desync_mitigation_mode": "defensive",
            "dns_name": "idalov-app-lb-1101936796.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:245154219216:loadbalancer/app/idalov-app-lb/3891f646003eab84",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "idalov-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-035badecb7826e922"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0112f9c4617ee7d3d"
              },
              {
                "subnet_id": "subnet-0351608898f8a72ab"
              },
              {
                "subnet_id": "subnet-0f4c87f412632e488"
              }
            ],
            "subnets": [
              "subnet-0112f9c4617ee7d3d",
              "subnet-0351608898f8a72ab",
              "subnet-0f4c87f412632e488"
            ],
            "vpc_id": "vpc-0e2232ea7e03046b9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_default_subnet.idalov_default_subnet_a",
            "aws_default_subnet.idalov_default_subnet_b",
            "aws_default_subnet.idalov_default_subnet_c",
            "aws_security_group.idalov_lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "idalov_default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:subnet/subnet-0112f9c4617ee7d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0112f9c4617ee7d3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245154219216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "idalov_default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:subnet/subnet-0f4c87f412632e488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0f4c87f412632e488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245154219216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "idalov_default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:subnet/subnet-0351608898f8a72ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0351608898f8a72ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "245154219216",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:vpc/vpc-0e2232ea7e03046b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-062813752fb0152c1",
            "default_route_table_id": "rtb-0683742c62d0185f8",
            "default_security_group_id": "sg-09d5b54811c44b354",
            "dhcp_options_id": "dopt-0bf1865d2448564f6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-0e2232ea7e03046b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0683742c62d0185f8",
            "owner_id": "245154219216"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "idalov_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:listener/app/idalov-app-lb/3891f646003eab84/920becfe3da6a4a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:targetgroup/idalov-target-group/450d962b9e143a46",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:245154219216:listener/app/idalov-app-lb/3891f646003eab84/920becfe3da6a4a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:loadbalancer/app/idalov-app-lb/3891f646003eab84",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.idalov_app_lb",
            "aws_default_subnet.idalov_default_subnet_a",
            "aws_default_subnet.idalov_default_subnet_b",
            "aws_default_subnet.idalov_default_subnet_c",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.idalov_target_group",
            "aws_security_group.idalov_lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "idalov_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:245154219216:targetgroup/idalov-target-group/450d962b9e143a46",
            "arn_suffix": "targetgroup/idalov-target-group/450d962b9e143a46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:245154219216:targetgroup/idalov-target-group/450d962b9e143a46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "idalov-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "idalov_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:security-group/sg-035badecb7826e922",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-035badecb7826e922",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231107193057269700000001",
            "name_prefix": "terraform-",
            "owner_id": "245154219216",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "idalov_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:security-group/sg-0d7edeac43ec1ae04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7edeac43ec1ae04",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035badecb7826e922"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20231107193100545000000002",
            "name_prefix": "terraform-",
            "owner_id": "245154219216",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2232ea7e03046b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.idalov_lb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "idalov_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:245154219216:vpc/vpc-0a5b10118d4b8da60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c765433dac4820cc",
            "default_route_table_id": "rtb-099bbab8b552e35f7",
            "default_security_group_id": "sg-0cf328ce5ea682cb0",
            "dhcp_options_id": "dopt-0bf1865d2448564f6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5b10118d4b8da60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-099bbab8b552e35f7",
            "owner_id": "245154219216",
            "tags": {
              "Name": "idalov-vpc"
            },
            "tags_all": {
              "Name": "idalov-vpc"
            }
          }
        }
      ]
    }
  ]
}